# rustybox

./: Cargo.toml  README.md
.github/workflows/: rust-clippy.yml  rust.yml
src/: filemeta.rs  main.rs
src/applets/: cat.rs  env.rs  ls.rs  mod.rs  sleep.rs  touch.rs  true_app.rs
src/core/: args.rs
src/librb/: mod.rs
src/librb/file/: filemeta.rs  filetype.rs  mod.rs  permissions.rs
